//              __/ |           __/ |                                                      
//             |___/           |___/                                                       
//
// RELEASENOTES RELEASENOTES RELEASENOTES RELEASENOTES RELEASENOTES RELEASENOTES RELEASENOTES

VERSION OF XX-09-2022
---------------------
1) Added percentage to the StyleProgressCtrl


VERSION OF 21-07-2022
---------------------
1) Closing of paint-resize bugs
2) Closing of the StyleMessageBox bugs
3) Closing of DEL/BACKSPACE keys issue of StyleEdit

VERSION OF 05-03-2022
---------------------
1) The 'base version' of the new 'Dark mode'
   Work needs still to be done on various controls (StyleListCtrl & StyleTabCtrl)
   This is a very good example of what dark-mode will look like

VERSION OF 04-12-2021
---------------------
1) Updated to VS2022
2) Better handling of the default button in a StyleMessageBox

VERSION OF 10-08-2021
---------------------
1) Library is updated to MS-Windows SDK 10 (latest) and C++ ISO 2020 (latest)
2) Fixed a bug in StyleMessageBox so that ENTER works again with the default button.

VERSION OF 11-07-2021
---------------------
1) You can only drag the edges of dialogs and FrameWnd's if they are not in the WS_MAXIMIZE 
   state. This was done to avoid horrible drawing bugs. And it's the normal MS-Windows behaviour
2) Dialogs can now resize to a LARGER size, but never to a SMALLER size as defined in the *.rc file
   This is done, so that controls do not obscure each other on the screen.
3) After resizing, the combobox edit boxes again paint correctly and not with a double border.

Version of 24-06-2021
---------------------
1) StyleEdit boxes that are **NOT** multiline are now created without a style frame
   to greatly reduce the number of GDI objects in an application
   Only multiline StyleEdit objects still have a styling framework

Version of 02-05-2021
---------------------
1) Release version 1.0.1