@@ -150,7 +150,7 @@
     <ClInclude Include="StyleToast.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="StyleStatic.h">
+    <ClInclude Include="StyleStaticToast.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="StyleComboBox.h">
@@ -181,6 +181,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="StyleGroupBox.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="StyleStatic.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -296,7 +299,7 @@
     <ClCompile Include="StyleToast.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="StyleStatic.cpp">
+    <ClCompile Include="StyleStaticToast.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="StyleComboBox.cpp">
@@ -324,6 +327,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="StyleGroupBox.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="StyleStatic.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
