@@ -1,8 +1,8 @@
 ////////////////////////////////////////////////////////////////////////
 //
 // File: StyleStatic.cpp
-// Function: Styling frame for a static control
-//
+// Function: Styling for the CStatic
+// 
 //   _____ _         _ _             ______                                           _    
 //  / ____| |       | (_)           |  ____|                                         | |   
 // | (___ | |_ _   _| |_ _ __   __ _| |__ _ __ __ _ _ __ ___   _____      _____  _ __| | __
@@ -33,135 +33,107 @@ static char THIS_FILE[] = __FILE__;
 
 StyleStatic::StyleStatic()
 {
-  m_leftOffset      = 2 * STANDAARDFONTSIZE;
-  m_colorBackground = ::GetSysColor(COLOR_3DFACE); // Initializing the Background Color to the system face color.
-  m_colorText       = STATIC_BLACK; // Initializing the text to Black
-  m_brushBackground.CreateSolidBrush(m_colorBackground); // Create the Brush Color for the Background.
 }
 
 StyleStatic::~StyleStatic()
 {
 }
 
-BEGIN_MESSAGE_MAP(StyleStatic, CStatic)
+BEGIN_MESSAGE_MAP(StyleStatic,CStatic)
   ON_WM_PAINT()
-  ON_WM_CTLCOLOR_REFLECT()
   ON_WM_LBUTTONDOWN()
 END_MESSAGE_MAP()
 
 /////////////////////////////////////////////////////////////////////////////
 // StyleStatic message handlers
 
-HBRUSH StyleStatic::CtlColor(CDC* pDC, UINT nCtlColor) 
-{
-  UNUSED_ALWAYS(nCtlColor);
-  HBRUSH hbr;
-  hbr = (HBRUSH)m_brushBackground;		// Passing a Handle to the Brush
-  pDC->SetBkColor(m_colorBackground); // Setting the Color of the Text Background to the one passed by the Dialog
-  pDC->SetTextColor(m_colorText);			// Setting the Text Color to the one Passed by the Dialog
-
-	return hbr;
-}
-
-void 
+void
 StyleStatic::SetLeftOffset(int p_offset)
 {
-  m_leftOffset = WS(p_offset);
-}
-
-void 
-StyleStatic::SetExtraText1(CString p_text)
-{
-  m_text1 = p_text;
-}
-
-void 
-StyleStatic::SetExtraText2(CString p_text)
-{
-  m_text2 = p_text;
-}
-
-void 
-StyleStatic::SetBkColor(COLORREF crColor)
-{
-  m_colorBackground = crColor;                  // Passing the value passed by the dialog to the member variable for Background Color
-  m_brushBackground.DeleteObject();             // Deleting any Previous Brush Colors if any existed.
-  m_brushBackground.CreateSolidBrush(crColor);  // Creating the Brush Color For the Static Text Background
-  RedrawWindow();
-}
-
-void 
-StyleStatic::SetTextColor(COLORREF crColor)
-{
-  m_colorText = crColor; // Passing the value passed by the dialog to the member variable for Text Color
-  RedrawWindow();
-}
-
-int
-StyleStatic::GetPosition(int p_height)
-{
-  int lines = 1;
-  if(m_text1.GetLength()) ++lines;
-  if(m_text2.GetLength()) ++lines;
-  int space = p_height / (lines + 1);
-
-  // Middle minus half a textline
-  return space - (WS(20) / 2);
+  if(p_offset > 0)
+  {
+    m_leftOffset = WS(p_offset);
+  }
 }
 
 void
-StyleStatic::OnLButtonDown(UINT nFlags, CPoint point)
+StyleStatic::SetBkColor(COLORREF crColor)
 {
-	CWnd* owner = GetOwner();
-	if(owner)
-	{
+  m_colorBackground = crColor;
+  RedrawWindow();
+}
+
+void
+StyleStatic::SetTextColor(COLORREF crColor)
+{
+  m_colorText = crColor;
+  RedrawWindow();
+}
+
+COLORREF
+StyleStatic::GetTextColor()
+{
+  return m_colorText;
+}
+
+COLORREF
+StyleStatic::GetBkColor()
+{
+  return m_colorBackground;
+}
+
+void
+StyleStatic::OnLButtonDown(UINT nFlags,CPoint point)
+{
+  CWnd* owner = GetOwner();
+  if(owner)
+  {
     owner->OnCmdMsg(GetDlgCtrlID(),STN_CLICKED,NULL,NULL);
-	}
+  }
 }
 
 void
 StyleStatic::OnPaint()
 {
-	// Do the default processing
-	CStatic::Default();
+  // Do the default processing
+  CStatic::Default();
 
-	// Get the DC and the rectangle
-	CDC* pDC = GetDC();
-	CRect rect;
-	GetClientRect(&rect);
+  // Get the DC and the rectangle
+  CDC* pDC = GetDC();
+  CRect rect;
+  GetClientRect(&rect);
 
-	// Get the text1
-	CString text;
-	GetWindowText(text);
+  // Get the text1
+  CString text;
+  GetWindowText(text);
 
-	// Paint the background
-	pDC->FillSolidRect(&rect, m_colorBackground);
+  // Paint the background
+  DWORD background = m_colorBackground;
+  if(background == (DWORD)NO_COLOR)
+  {
+    background = ThemeColor::GetColor(ThemeColor::Colors::ColorWindowFrame);
+  }
+  pDC->FillSolidRect(&rect,background);
 
-	// Paint the text
-	int fontheight = 2 * STANDAARDFONTSIZE;
-	CFont* org = pDC->SelectObject(&STYLEFONTS.DialogTextFontBold);
-	pDC->SetTextColor(m_colorText);
-	rect.left += m_leftOffset;
-	rect.top  += GetPosition(rect.Height());
-	rect.bottom = rect.top + fontheight;
+  // Set text color
+  DWORD textcolor = m_colorText;
+  if(textcolor == (DWORD) NO_COLOR)
+  {
+    textcolor = ThemeColor::GetColor(ThemeColor::Colors::ColorEditText);
+  }
+  pDC->SetTextColor(textcolor);
 
-	pDC->DrawText(text,&rect, DT_LEFT | DT_VCENTER | DT_SINGLELINE | DT_NOPREFIX);
+  // Paint the text
+  int fontheight = STANDARDFONTSIZE;
+  CFont* org = pDC->SelectObject(&STYLEFONTS.DialogTextFont);
+  
+  // Use left offset
+  rect.left += m_leftOffset;
 
-	if(m_text1.GetLength())
-	{
-		pDC->SelectObject(&STYLEFONTS.DialogTextFont);
-		rect.top    += fontheight;
-		rect.bottom += fontheight;
-    pDC->DrawText(m_text1,&rect,DT_LEFT | DT_VCENTER | DT_SINGLELINE | DT_NOPREFIX);
+  // Print the text
+  pDC->DrawText(text,&rect,DT_LEFT | DT_VCENTER | DT_NOPREFIX | DT_WORDBREAK | DT_EXPANDTABS);
 
-		if(m_text2.GetLength())
-		{
-			rect.top    += fontheight;
-			rect.bottom += fontheight;
-			pDC->DrawText(m_text2,&rect,DT_LEFT | DT_VCENTER | DT_SINGLELINE | DT_NOPREFIX);
-		}
-	}
-
-	pDC->SelectObject(org);
-	ReleaseDC(pDC);
+  // Restore originals
+  pDC->SelectObject(org);
+  ReleaseDC(pDC);
 }
